@@ -1,4 +1,4 @@
-# exim test configuration 0616
+# exim test configuration 3002
 exim_path = EXIM_PATH
 keep_environment = ^FOO\d : BAR
 add_environment = ADDED1=added1 : ADDED2=added2
